Updated readme and other links

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Swagger theme will convert your swagger.json file into an awesome html static website"
+    <meta name="theme-color" content="#FFFFFF" />
+    <meta name="keywords" content="Swagger, OpenAPI, IO Docs, WADL, RAML, Google API Descory, API Blueprint, HTML, Static, Theme, Documentation, Website, YAML, JSON, API">
+    <meta name="description" content="Convert any API Specification into an awesome HTML documentation website"
     />
-    <title>Swagger Theme</title>
+    <title>API HTML</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
